<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/aplicativo_lista_vip_curso_android"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp"
                android:layout_marginTop="64dp"
                android:ems="10"
                android:hint="@string/primeiro_nome"
                android:inputType="text"
                tools:ignore="Autofill"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editSobreNome"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp"
                android:ems="10"
                android:hint="@string/sobrenome"
                android:inputType="text"
                tools:ignore="Autofill"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editNomeCurso"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp"
                android:ems="10"
                android:hint="@string/nome_do_curso_desejado"
                android:inputType="text"
                tools:ignore="Autofill"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editTelefone"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp"
                android:ems="10"
                android:hint="@string/telefone_de_contato"
                android:inputType="text"
                tools:ignore="Autofill"
                tools:layout_editor_absoluteX="29dp" />

            <TextView
                android:id="@+id/textSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="Selecione um curso" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginHorizontal="16dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="45dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/limpar"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="48dp"
                    android:text="@string/salvar"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/finalizar"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>